--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ember-load-initializers": "^0.5.1",
     "ember-localstorage-adapter": "1.0.0-rc.1",
     "ember-resolver": "^2.0.3",
+    "ember-truth-helpers": "1.2.0",
     "loader.js": "^4.0.1"
   }
 }
