--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ember-moment": "7.0.0-beta.3",
     "ember-resolver": "^2.0.3",
     "ember-truth-helpers": "1.2.0",
+    "emberx-select": "2.2.1",
     "loader.js": "^4.0.1"
   }
 }
